# translate

./: .gitignore  APPROACH.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: architect.md  coder.md  docs_writer.md  monitor.md  paper_writer.md  survey_writer.md  tester.md
.claude/commands/: lint.md  test.md  translate.md
corpus/: flores200_devtest.bn.txt  flores200_devtest.en.txt
corpus/samanantar/: test.bn.txt  test.en.txt  train.bn.txt  train.en.txt  val.bn.txt  val.en.txt
docs/: AI_PRIMER.md  ARCHITECTURE.md  DEVELOPMENT.md  GLOSSARY.md  HARDWARE.md  INDEX.md  MODELS.md  MONITORING.md  TRAINING.md
docs/diagrams/: class_hierarchy.mmd  component_overview.mmd  monitoring_architecture.mmd  pipeline_overview.mmd  sequence_translate.mmd  training_pipeline.mmd
paper/: PAPER_REVISIONS.md  acm_paper.tex  ieee_paper.tex  ieee_transactions_paper.tex  survey_paper.tex
paper/acm_tallip/: acm_tallip_slides.tex
paper/archive/: ieee_paper_2026-04-08_v3_pre.tex  ieee_paper_v1_to_v2.diff  ieee_paper_v2_to_v3.diff  survey_paper_2026-04-07_v2_pre.tex  survey_paper_2026-04-08_v3_pre.tex  survey_paper_v1_to_v2.diff  survey_paper_v2_to_v3.diff
paper/ieee_conference/: ieee_conference.tex  ieee_conference_slides.tex
paper/ieee_transactions/: ieee_transactions.tex  ieee_transactions_slides.tex
scripts/: benchmark.py  download_corpus.py  download_models.py  finetune.py  gen_paper_figures.py  get_corpus.py  plot_stats.py  setup_cuda.sh  show_stats.py
tests/: conftest.py
(+59 files in other folders)
