[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bn-en-translate"
version = "0.1.0"
description = "Local Bengali-to-English story translation using open-source models"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.45.0",
    "sentencepiece>=0.2.0",
    "ctranslate2>=4.4.0",
    "sacrebleu>=2.4.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    # Install separately: pip install torch --index-url https://download.pytorch.org/whl/cu128
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.112.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[project.scripts]
bn-translate = "bn_en_translate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests that download/load models (deselect with -m 'not slow')",
    "e2e: marks full end-to-end quality tests (deselect with -m 'not e2e')",
    "gpu: marks tests that require a CUDA device",
]
addopts = "-ra -q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
